# ChangeLog for media-sound/audacious
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.156 2009/03/14 21:32:55 nixnut Exp $

  14 Mar 2009; nixnut <nixnut@gentoo.org> audacious-1.5.1-r1.ebuild:
  ppc stable #247287

  11 Feb 2009; <chainsaw@gentoo.org> audacious-1.5.1-r1.ebuild:
  Remove obsolete glade dependency as requested by Patrizio Bassi
  <hetfield666@gmail.com> in bug #258091.

  13 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  audacious-1.5.1-r1.ebuild:
  Stable on alpha, bug #247287

  30 Nov 2008; Raúl Porcel <armin76@gentoo.org> audacious-1.5.1-r1.ebuild:
  sparc/x86 stable wrt #247287

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> audacious-1.5.1-r1.ebuild:
  Stable for HPPA (bug #247287).

  26 Nov 2008; Brent Baude <ranger@gentoo.org> audacious-1.5.1-r1.ebuild:
  Marking audacious-1.5.1-r1 ppc64 for bug 247287

  24 Nov 2008; <chainsaw@gentoo.org> audacious-1.5.1-r1.ebuild:
  Early stable on AMD64 as it blocks GCC 4.3 stabilisation efforts. For bug
  #247287 by Yaroslav Gorbunov <yagorbunov@mail.ru>.

*audacious-1.5.1-r1 (22 Jul 2008)

  22 Jul 2008; <chainsaw@gentoo.org> +files/1.5.1-commandline-options.patch,
  +audacious-1.5.1-r1.ebuild:
  Revision bump. Upstream patch from Matti Hamalainen <ccr@tnsp.org> closes
  bug #228365.

*audacious-1.5.1 (24 May 2008)

  24 May 2008; <chainsaw@gentoo.org> +audacious-1.5.1.ebuild:
  Version bump. Now supports session management through libSM.

  12 May 2008; Markus Rothe <corsair@gentoo.org> audacious-1.4.6.ebuild:
  Stable on ppc64

  18 Apr 2008; Tony Vroon <chainsaw@gentoo.org> audacious-1.4.6.ebuild:
  Mark 1.4.6 stable on AMD64; tested on a mobile Core 2 Duo (nocona).

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> audacious-1.4.6.ebuild:
  sparc/x86 stable

*audacious-1.5.0 (14 Mar 2008)

  14 Mar 2008; Tony Vroon <chainsaw@gentoo.org> +audacious-1.5.0.ebuild: