@@ -4,9 +4,11 @@ AUX audacious-1.5.1-interix.patch 405 RMD160 21e688457b9fcb5235aa3b76916516dabe0
 AUX audacious-1.5.1-interix3.patch 2323 RMD160 f520cb832002c2142711bcce6a544319029528d2 SHA1 38ec8391ef5c299e1f9e78a807b7c2df172ef49c SHA256 07499381331805bb161e0aa559428aa9b5934f95daba5c087e87b72bd4e43a51
 DIST audacious-1.5.0.tgz 1946403 RMD160 bc1fff2471ee1f8e7ed84f4aed060b572409853f SHA1 360f69a638234936209535a1610551b3d0a11226 SHA256 25a4e72ca44c2228b41246df662ae6a96b7ebcd561affacdc0dd83ebdee02322
 DIST audacious-1.5.1.tgz 1937747 RMD160 69cbd30ffde339ea0549c631766a5b866cf32c29 SHA1 3c3cb3a4f9997f5ab3a6b4937260b2899c844806 SHA256 ac5970c09ed25ac56dac15e035328592cace5321c7895229e682cac92201f1d7
+DIST audacious-2.0-alpha1.tgz 1870285 RMD160 1fa9c49edd25e504b47c5798571824c7bde54f90 SHA1 2f903864f9443da33edf92faad79929780aa6f78 SHA256 d9dd66e7550e5b19157b5b589516e3585a2b5d51b8965fb656b0168597fee0ca
 DIST gentoo_ice-xmms-0.2.tar.bz2 51839 RMD160 11439cbebf8c6dc5745c8593a79e88303d094544 SHA1 e97ebbf204e0d1b150265f9e67f0ed54d779e110 SHA256 d1be63368b76f4a8b1d5b0e955cd7a77177f56a7f0b828c6603d8fd2836422b1
 EBUILD audacious-1.5.0.ebuild 2045 RMD160 26405773c294f702e442f8f308c83fad51b0dc32 SHA1 f09bf0164090e37b725d0122629ef0f482f7b1b0 SHA256 154d7b0298d5829ab61dc46f505d6b26f0cd65f9d5d1a51d4ebc1f6706033921
 EBUILD audacious-1.5.1-r1.ebuild 2261 RMD160 511bf43852bba5ac057ef745db191637fdfd78fa SHA1 21c2dd93ac037854db0597c9e9f4931d924a445a SHA256 09e471ea7622ddfeba93a049288f9d74873349fc15ae718d73e2ce16924db57a
 EBUILD audacious-1.5.1.ebuild 2175 RMD160 c4f4515052398aa653e473c2e2846c949b4da4ee SHA1 a88a35b74f6d41d305989ac23c4f267a184ae235 SHA256 79417a00ba0d11278a34bb2a15fb39e482aca1dd7fbc9c161802b43a89569ada
-MISC ChangeLog 26939 RMD160 6c3cfa302bff325ae2e68f3d225fe9ad7f61e767 SHA1 dbb5d41efca3f2b2089585b75c952ce7b275b3aa SHA256 86097d967703e6983b0cf0d0bdd810b94145f116565d9af98b4d77e2163f1087
+EBUILD audacious-2.0_alpha1.ebuild 2125 RMD160 9711fae15e16b7d93c7612fa8263b5b32679a4fc SHA1 0102c0e7a9b260cefcbc9e67297df1d1e9ad0ae4 SHA256 7ec3665387a0a268f65556786fad3ce80ec7c1fc186bcafbcf8b08ab6dba7f79
+MISC ChangeLog 27121 RMD160 1ae5d27ac4ec95d5dd0c6c98e65ced54a948bc17 SHA1 d1ea69989643f893fce93f77c23cb8a645e91a0f SHA256 c0145d92873db6e74af81801ba35b984dab14d3a3b36272f251c2459464cb1b6
 MISC metadata.xml 363 RMD160 fba132fb7596814a0d7e42330a5703dc4afa32dc SHA1 2a77afacfd9e5628bd59bfc6332320302d3a6387 SHA256 cc833502f2ab5b13e4b22684d0f7bec07804c3aa2daccaee913297853e6e5b07
